--- a/.github/workflows/production-release.yml
+++ b/.github/workflows/production-release.yml
@@ -1,8 +1,8 @@
 name: production-release
 
 on:
-  release:
-    types: [released]
+  # release:
+  #   types: [released]
 
 jobs:
   arm64:
@@ -28,9 +28,9 @@ jobs:
           context: .
           platforms: linux/arm64
           push: true
-          tags: themarkwill/coolify:${{steps.package-version.outputs.current-version}}-arm64
-          cache-from: type=registry,ref=themarkwill/coolify:buildcache-arm64
-          cache-to: type=registry,ref=themarkwill/coolify:buildcache-arm64,mode=max
+          tags: coollabsio/coolify:${{steps.package-version.outputs.current-version}}-arm64
+          cache-from: type=registry,ref=coollabsio/coolify:buildcache-arm64
+          cache-to: type=registry,ref=coollabsio/coolify:buildcache-arm64,mode=max
   amd64:
     runs-on: ubuntu-latest
     steps:
@@ -54,9 +54,9 @@ jobs:
           context: .
           platforms: linux/amd64
           push: true
-          tags: themarkwill/coolify:${{steps.package-version.outputs.current-version}}-amd64
-          cache-from: type=registry,ref=themarkwill/coolify:buildcache-amd64
-          cache-to: type=registry,ref=themarkwill/coolify:buildcache-amd64,mode=max
+          tags: coollabsio/coolify:${{steps.package-version.outputs.current-version}}-amd64
+          cache-from: type=registry,ref=coollabsio/coolify:buildcache-amd64
+          cache-to: type=registry,ref=coollabsio/coolify:buildcache-amd64,mode=max
   aarch64:
     runs-on: [self-hosted, arm64]
     steps:
@@ -80,9 +80,9 @@ jobs:
           context: .
           platforms: linux/aarch64
           push: true
-          tags: themarkwill/coolify:${{steps.package-version.outputs.current-version}}-aarch64
-          cache-from: type=registry,ref=themarkwill/coolify:buildcache-aarch64
-          cache-to: type=registry,ref=themarkwill/coolify:buildcache-aarch64,mode=max
+          tags: coollabsio/coolify:${{steps.package-version.outputs.current-version}}-aarch64
+          cache-from: type=registry,ref=coollabsio/coolify:buildcache-aarch64
+          cache-to: type=registry,ref=coollabsio/coolify:buildcache-aarch64,mode=max
   merge-manifest:
     runs-on: ubuntu-latest
     needs: [amd64, arm64, aarch64]
@@ -103,8 +103,8 @@ jobs:
         id: package-version
       - name: Create & publish manifest
         run: |
-          docker manifest create themarkwill/coolify:${{steps.package-version.outputs.current-version}} --amend themarkwill/coolify:${{steps.package-version.outputs.current-version}}-amd64 --amend themarkwill/coolify:${{steps.package-version.outputs.current-version}}-arm64 --amend themarkwill/coolify:${{steps.package-version.outputs.current-version}}-aarch64
-          docker manifest push themarkwill/coolify:${{steps.package-version.outputs.current-version}}
+          docker manifest create coollabsio/coolify:${{steps.package-version.outputs.current-version}} --amend coollabsio/coolify:${{steps.package-version.outputs.current-version}}-amd64 --amend coollabsio/coolify:${{steps.package-version.outputs.current-version}}-arm64 --amend coollabsio/coolify:${{steps.package-version.outputs.current-version}}-aarch64
+          docker manifest push coollabsio/coolify:${{steps.package-version.outputs.current-version}}
       - uses: sarisia/actions-status-discord@v1
         if: always()
         with:
